--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,7 @@ pipeline{
       jdk 'myjava'
       maven 'mymaven'
   }
-  agent slave 
+  agent any
   stages{    
     stage('checkout'){
       steps{       
